<?xml version="1.0" encoding="UTF-8"?>
<!-- 
/*
 * Copyright 2001-2004 The Apache Software Foundation.
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.funthomas424242</groupId>
    <artifactId>org.gui4j</artifactId>
    <packaging>jar</packaging>
    <version>0.1.6-SNAPSHOT</version>
    <name>gui4j</name>
    <inceptionYear>2002</inceptionYear>

    <prerequisites>
        <maven>${mavenVersion}</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mavenVersion>3.6.3</mavenVersion>
        <maven.compiler.release>11</maven.compiler.release>
        <java.version>13</java.version>
    </properties>

    <!-- details about the organization that 'owns' the project -->
    <organization>
        <name>beck et al. projects GmbH</name>
        <url>http://www.bea-projects.de/</url>
    </organization>

    <!-- the year the project started -->
    <description>gui4j is a framework for describing Java Swing GUIs completely in XML. The graphical user interface
        is created dynamically based on the XML definitions. Each GUI window is associated with exactly one top-level
        XML file. Each XML file can dynamically include other XML files to support complex GUI definitions. Each XML
        file is associated with a java object that acts as both a Controller and a Model for the
        GUI. There is a strong layer separation between the GUI and the Controller: GUI definitions in the XML files
        can access all Java methods of the Controller, but Java methods cannot access any GUI elements directly. Events
        are used to trigger changes in the GUI. gui4j requires Java 1.4.0 or higher.
    </description>

    <!-- the project home page -->
    <url>http://www.gui4j.org</url>

    <scm>
        <url>https://github.com/FunThomas424242/gui4j</url>
        <connection>scm:git:https://github.com/FunThomas424242/gui4j.git</connection>
        <developerConnection>scm:git:https://github.com/FunThomas424242/gui4j.git</developerConnection>
    </scm>

    <ciManagement>
        <url>https://github.com/FunThomas424242/gui4j/issues</url>
    </ciManagement>


    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub FunThomas424242 Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/FunThomas424242/${project.artifactId}</url>
        </repository>
    </distributionManagement>

    <!-- jar files the project is dependent on -->
    <dependencies>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
        </dependency>
    </dependencies>

    <reports>
        <report>maven-license-plugin</report>
        <report>maven-javadoc-plugin</report>
        <report>maven-changes-plugin</report>
    </reports>

    <!-- build information for the project -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${mavenVersion}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <rulesUri>file:///${project.basedir}/etc/version-rules.xml</rulesUri>
                </configuration>
                <executions>
                    <execution>
                        <id>show-dep-updates</id>
                        <phase>
                            validate
                        </phase>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <release>11</release>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.5</version>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <!-- any mailing lists for the project -->
    <mailingLists>
        <mailingList>
            <name>gui4j user list</name>
            <subscribe>http://lists.sourceforge.net/lists/listinfo/gui4j-user</subscribe>
            <unsubscribe>http://lists.sourceforge.net/lists/listinfo/gui4j-user</unsubscribe>
        </mailingList>
        <mailingList>
            <name>gui4j developer list</name>
            <subscribe>http://lists.sourceforge.net/lists/listinfo/gui4j-devel</subscribe>
            <unsubscribe>http://lists.sourceforge.net/lists/listinfo/gui4j-devel</unsubscribe>
        </mailingList>
    </mailingLists>

    <!-- who the developers are for the project -->
    <developers>
        <developer>
            <name>Joachim Schmid</name>
            <id>joachims</id>
            <email>joachim.schmid at bea.de</email>
            <organization>beck et al. projects GmbH</organization>
            <roles>
                <role>Creator</role>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Kay Krüger-Barvels</name>
            <id>kayk</id>
            <email>kay.krueger-barvels at bea.de</email>
            <organization>beck et al. projects GmbH</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Marcus Adlwart</name>
            <id>marcusa</id>
            <email>marcus.adlwart at bea.de</email>
            <organization>beck et al. projects GmbH</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>FunThomas424242 (Thomas Schubert)</name>
            <roles>
                <role>Developer</role>
                <role>Packager</role>
                <role>Deployer</role>
            </roles>
        </contributor>
    </contributors>

</project>
